--- a/style.css
+++ b/style.css
@@ -1,60 +1,82 @@
-#titulo img{
+body {
+    font-family: 'Roboto', sans-serif;
+}
+
+body li {
+    font-size: 20px;
+}
+
+#titulo img {
     padding: 10px;
     width: 50%;
 }
-#especialista{
+
+#especialista {
     width: 100%;
     padding: 10px;
-    background-image: linear-gradient(to right, rgb(94, 1, 36) , rgb(60, 0, 128));
+    background-image: linear-gradient(to left, #003AA3, #3471AC, #003698, #1F4E81);
     color: white;
 }
 
-#especialista img{
+#especialista img {
     width: 100%;
     margin: 20px;
 }
 
-#especialista h1{
+#especialista h1 {
     margin-top: 100px;
 }
-.servicos{
+
+.servicos {
     width: 100%;
     padding: 10px;
 }
 
-.servicos h1{
+.servicos h1 {
     margin-top: 10px;
 }
 
-
-#contato{
+#contato {
     width: 100%;
     padding: 70px;
-    background-image: linear-gradient(to left, rgb(94, 1, 36) , rgb(60, 0, 128));
+    background-image: linear-gradient(to left, #003AA3, #003698, #1F4E81);
     color: white;
 }
 
-#contato a{
+#contato a {
     text-decoration: none;
     color: white;
 }
-#ferramentas{
+
+#ferramentas {
     padding: 20px;
 }
-#ferramentas img{
+
+#ferramentas img {
     width: 100%;
     height: 350px;
     margin: 0px;
 }
-#creditos{
-    background-image: linear-gradient(to right, rgb(94, 1, 36) , rgb(60, 0, 128));
+
+#creditos {
+    background-image: linear-gradient(to right, #003AA3, #003698, #1F4E81);
     color: white;
     float: right;
     width: 100%;
     padding: 5px;
 }
-#creditos a{
+
+#creditos a {
     text-decoration: none;
     color: white;
 }
 
+#clientes {
+    padding: 50px;
+}
+
+#videos {
+    background-image: linear-gradient(to left, #003AA3, #003698, #1F4E81);
+    padding: 30px;
+    color: white;
+}
