--- a/style.css
+++ b/style.css
@@ -2,19 +2,25 @@ body {
     font-family: 'Roboto', sans-serif;
 }
 
-#navbarResponsive{
+#navbarResponsive {
     float: right;
+}
+
+#titulo-mb {
+    padding: 20px;
 }
 
 body li {
     font-size: 20px;
 }
-#titulo a{
-    color:#000;
+
+#titulo a {
+    color: #000;
     text-decoration: none;
 }
+
 #titulo img {
-     width: 25%;
+    width: 25%;
 }
 
 #especialista {
@@ -85,4 +91,23 @@ body li {
     background-image: linear-gradient(to left, #003AA3, #003698, #1F4E81);
     padding: 30px;
     color: white;
+}
+
+@media (max-width: 1000px) {
+    #titulo {
+        display: none;
+    }
+    #titulo-mb {
+        display: show;
+    }
+    #especialista h1 {
+        margin-top: 10px;
+    }
+ 
+}
+
+@media (min-width: 1000px) {
+    #titulo-mb {
+        display: none;
+    }
 }
